--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>GitHub Pages テスト</title>
+  <title>Neon Breaker 198X</title>
 </head>
 <body>
-  <h1>Hello GitHub Pages!</h1>
+  <h1>Neon Breaker 198X</h1>
+  <p>Modern-retro 8-bit brick breaker game.</p>
+
+  <ul>
+    <li><a href="privacy.html">Privacy Policy</a></li>
+    <li><a href="terms.html">Terms of Service</a></li>
+    <li><a href="faq.html">FAQ</a></li>
+  </ul>
 </body>
 </html>
