--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,46 @@
-<h1>Privacy Policy</h1>
+Privacy Policy
 
-<p>This application does not collect personally identifiable information directly.</p>
+Introduction
+This application, "Neon Breaker 198X" (hereinafter referred to as "the App"), respects your privacy and is committed to protecting user information. This Privacy Policy explains what information may be collected, how it is used, and how it is protected. By using the App, you are deemed to have agreed to this Privacy Policy.
 
-<p>For advertising purposes, Google AdMob may use advertising identifiers and cookies.
-These are used only for ad delivery and analytics.</p>
+Information We Collect
+The App does not intentionally collect personally identifiable information (PII) such as your name, address, email address, or phone number.
 
-<p>This app can be used offline.
-Game data is stored locally on the device and is not transmitted to external servers.</p>
+However, to provide and improve the App and to deliver advertisements, certain information may be collected automatically, including but not limited to:
+- Device identifiers (such as Advertising ID)
+- Device information (model, operating system version, language settings)
+- IP address and approximate location (country or region level)
+- App usage data and in-app events (such as stage completion or error logs)
 
-<p>If you are a minor, please use this application with the consent of a parent or guardian.</p>
+How We Use the Information
+The information collected is used solely for the following purposes:
+- To operate and maintain the App’s functionality
+- To analyze usage trends and improve performance and user experience
+- To deliver, measure, and optimize advertisements
+- To detect, prevent, and address technical issues or fraudulent activity
+- To comply with legal obligations
+
+Third-Party Services and Advertising
+The App uses third-party services for advertisement delivery, specifically Google AdMob. Google and its partners may use cookies, SDKs, or similar technologies to collect and process data for advertising, analytics, and fraud prevention purposes.
+
+For more information about how Google uses data collected from apps that use its services, please refer to:
+https://policies.google.com/privacy
+
+User Rights (GDPR / CCPA and Similar Regulations)
+Depending on your location, you may have certain rights regarding your personal data, including the right to access, correct, restrict, or delete your data.
+
+Users may opt out of personalized advertising at any time through their device settings, such as enabling “Limit Ad Tracking” or similar options provided by the operating system.
+
+For users in regions such as the European Economic Area (EEA), the United Kingdom, or the State of California, the App uses Google’s consent and privacy management tools to comply with applicable regulations.
+
+Children’s Privacy (COPPA)
+The App is not directed toward children under the age of 13 (or the minimum age defined by local law). The App does not knowingly collect personal information from children. If it is discovered that personal information has been unintentionally collected from a child, such information will be deleted promptly.
+
+Offline Use and Data Storage
+The App can be used offline. Game progress and related data are stored locally on the user’s device and are not transmitted to external servers operated by the developer.
+
+Changes to This Privacy Policy
+This Privacy Policy may be updated from time to time to reflect changes in laws, regulations, or the App’s functionality. The most recent version of this Privacy Policy will always be made available via the App or the official website.
+
+Contact
+If you have any questions or concerns about this Privacy Policy, please contact the developer through the contact information provided on the app store listing.
