--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,161 @@
-<h1>Terms of Service</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Terms of Service | Neon Breaker 198X</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<p>This application is provided as-is without any guarantees.</p>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.7;
+      margin: 0;
+      padding: 24px;
+      background-color: #ffffff;
+      color: #222222;
+    }
 
-<p>The developer is not responsible for any damages resulting from the use of this app.</p>
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
 
-<p>Game content and specifications may change without prior notice.</p>
+    h1 {
+      font-size: 28px;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-top: 32px;
+      margin-bottom: 12px;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 4px;
+    }
+
+    p {
+      margin: 12px 0;
+    }
+
+    ul {
+      margin: 12px 0 12px 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    footer {
+      margin-top: 48px;
+      font-size: 14px;
+      color: #666666;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <h1>Terms of Service</h1>
+
+    <h2>Agreement to Terms</h2>
+    <p>
+      By installing or using this application, <strong>"Neon Breaker 198X"</strong>
+      (hereinafter referred to as "the App"),
+      you agree to be bound by these Terms of Service and the Privacy Policy.
+      If you do not agree to these terms, please do not use the App.
+    </p>
+
+    <h2>Description of Service</h2>
+    <p>
+      The App provides entertainment content in the form of a retro-style
+      block-breaking game designed for mobile and other platforms.
+      All gameplay elements, scoring systems, stages, and features
+      are provided for entertainment purposes only.
+    </p>
+
+    <h2>Prohibited Conduct</h2>
+    <p>Users shall not engage in any of the following acts:</p>
+    <ul>
+      <li>Reverse engineering, disassembling, decompiling, or modifying the App</li>
+      <li>Infringing upon the intellectual property rights of the Developer or any third party</li>
+      <li>Unauthorized reproduction, distribution, or commercial use of the App or its content</li>
+      <li>Exploiting bugs, cheats, or unintended behaviors</li>
+      <li>Acts that place excessive load on systems or networks</li>
+      <li>Any other acts deemed inappropriate by the Developer</li>
+    </ul>
+
+    <h2>Advertisements and Third-Party Services</h2>
+    <p>
+      The App displays advertisements provided by third-party services,
+      including Google AdMob.
+      The Developer does not control and assumes no responsibility
+      for the content of advertisements or external websites.
+    </p>
+    <p>
+      When using social sharing features, the terms and policies of the respective
+      social media platforms apply independently.
+    </p>
+
+    <h2>Disclaimer of Warranties and Limitation of Liability</h2>
+    <ul>
+      <li>
+        <strong>No Warranty:</strong>
+        The App is provided "as is" without any warranties,
+        express or implied, including but not limited to accuracy,
+        reliability, or availability.
+      </li>
+      <li>
+        <strong>User Responsibility:</strong>
+        Users assume full responsibility for any consequences
+        arising from the use of the App.
+        The Developer shall not be liable for any damages,
+        including loss of data, loss of opportunity, or indirect damages.
+      </li>
+      <li>
+        <strong>Service Modification:</strong>
+        The Developer reserves the right to modify, suspend,
+        or terminate the App or its content at any time without notice.
+      </li>
+    </ul>
+
+    <h2>Intellectual Property Rights</h2>
+    <p>
+      All intellectual property rights related to the App,
+      including programs, designs, graphics, sound effects,
+      and texts, belong to the Developer or legitimate right holders.
+    </p>
+
+    <h2>Multilingual Support</h2>
+    <p>
+      The App supports multiple languages, including English,
+      Japanese, and Traditional Chinese.
+      While reasonable efforts are made to ensure translation accuracy,
+      the Developer does not guarantee that all translations are free from errors.
+      The Developer shall not be responsible for misunderstandings
+      arising from linguistic differences.
+    </p>
+
+    <h2>Changes to These Terms</h2>
+    <p>
+      The Developer may revise these Terms of Service at any time.
+      Updated terms shall become effective when posted within the App
+      or on the official website.
+    </p>
+
+    <h2>Governing Law and Jurisdiction</h2>
+    <p>
+      These Terms shall be governed by and construed in accordance
+      with the laws of Japan.
+      Any disputes arising in connection with the App
+      shall be subject to the exclusive jurisdiction
+      of the courts having jurisdiction over the Developer's location.
+    </p>
+
+    <footer>
+      Supplementary Provisions Established: January 31, 2026
+    </footer>
+
+  </div>
+</body>
+</html>
