--- a/faq.html
+++ b/faq.html
@@ -1,10 +1,184 @@
-<h1>FAQ</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>FAQ | Neon Breaker 198X</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h3>Is this game free?</h3>
-<p>Yes. This game is free to play and supported by ads.</p>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.7;
+      margin: 0;
+      padding: 24px;
+      background-color: #ffffff;
+      color: #222222;
+    }
 
-<h3>Does it work offline?</h3>
-<p>Yes. You can play offline.</p>
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
 
-<h3>Does it collect personal data?</h3>
-<p>No personal information is collected directly.</p>
+    h1 {
+      font-size: 28px;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-top: 32px;
+      margin-bottom: 12px;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 4px;
+    }
+
+    h3 {
+      font-size: 17px;
+      margin-top: 20px;
+      margin-bottom: 6px;
+    }
+
+    p {
+      margin: 6px 0 12px 0;
+    }
+
+    footer {
+      margin-top: 48px;
+      font-size: 14px;
+      color: #666666;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <h1>FAQ</h1>
+
+    <h2>About the Game</h2>
+
+    <h3>Is this game free to play?</h3>
+    <p>
+      Yes. Neon Breaker 198X is free to play.
+      The game is supported by advertisements,
+      which allow us to continue development and provide updates.
+    </p>
+
+    <h3>Does the game work offline?</h3>
+    <p>
+      Yes. The game can be played offline.
+      However, advertisements and some optional features
+      may not be available without an internet connection.
+    </p>
+
+    <h3>How many stages are available?</h3>
+    <p>
+      The game includes a large number of stages designed
+      to provide long-term enjoyment.
+      Additional stages may be added through future updates.
+    </p>
+
+    <h2>Gameplay and Data</h2>
+
+    <h3>Does the game save my progress?</h3>
+    <p>
+      Yes. Game progress and settings are saved locally
+      on your device.
+      Currently, no cloud synchronization is used.
+    </p>
+
+    <h3>Will my progress be lost if I uninstall the app?</h3>
+    <p>
+      Yes. Since data is stored locally on your device,
+      uninstalling the app will remove your saved progress.
+    </p>
+
+    <h2>Social Media Sharing</h2>
+
+    <h3>Can I share my score or progress on social media?</h3>
+    <p>
+      Yes. The game includes a sharing feature
+      that allows you to post your score or progress
+      to social media platforms such as X (formerly Twitter),
+      Instagram, LINE, and others.
+    </p>
+
+    <h3>Does shared content include personal information?</h3>
+    <p>
+      No. Shared images or text only include game-related
+      information such as scores or stage progress.
+      No personal information is included automatically.
+    </p>
+
+    <h2>Advertisements</h2>
+
+    <h3>Why are advertisements displayed?</h3>
+    <p>
+      Advertisements help cover development and operational costs,
+      allowing the game to remain free to play
+      and to receive future updates.
+      We appreciate your understanding.
+    </p>
+
+    <h3>Can I disable personalized ads?</h3>
+    <p>
+      Yes. You can limit or disable personalized advertising
+      through your device’s privacy or ad settings,
+      such as enabling “Limit Ad Tracking.”
+    </p>
+
+    <h2>Language and Settings</h2>
+
+    <h3>Which languages are supported?</h3>
+    <p>
+      The game supports multiple languages,
+      including English, Japanese, and Traditional Chinese.
+      You can change the language from the in-game settings menu.
+    </p>
+
+    <h3>I found a translation error. What should I do?</h3>
+    <p>
+      While we strive to provide accurate translations,
+      minor differences or errors may occur.
+      We appreciate your understanding.
+    </p>
+
+    <h2>Troubleshooting</h2>
+
+    <h3>The game is not working correctly.</h3>
+    <p>
+      Please try restarting the app
+      or rebooting your device.
+      If the issue persists, ensure that your device
+      has sufficient available memory.
+    </p>
+
+    <h3>An error occurred or the app crashed.</h3>
+    <p>
+      This may be due to temporary device conditions.
+      Restarting the app usually resolves the issue.
+    </p>
+
+    <h2>Other</h2>
+
+    <h3>Does this app require account registration?</h3>
+    <p>
+      No. This app does not require user registration
+      and does not manage personal accounts.
+    </p>
+
+    <h3>How can I delete my data?</h3>
+    <p>
+      Since all data is stored locally,
+      uninstalling the app will remove all saved data
+      from your device.
+    </p>
+
+    <footer>
+      © Neon Breaker 198X
+    </footer>
+
+  </div>
+</body>
+</html>
