--- a/index.html
+++ b/index.html
@@ -2,16 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Neon Breaker 198X</title>
-</head>
-<body>
-  <h1>Neon Breaker 198X</h1>
-  <p>Modern-retro 8-bit brick breaker game.</p>
+  <title>Neon Breaker 198X | Retro Brick Breaker Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <ul>
-    <li><a href="privacy.html">Privacy Policy</a></li>
-    <li><a href="terms.html">Terms of Service</a></li>
-    <li><a href="faq.html">FAQ</a></li>
-  </ul>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.7;
+      margin: 0;
+      padding: 24px;
+      background-color: #ffffff;
+      color: #222222;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 8px;
+    }
+
+    h2 {
+      font-size: 22px;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 4px;
+    }
+
+    p {
+      margin: 12px 0;
+    }
+
+    ul {
+      margin: 12px 0 12px 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    .tagline {
+      font-size: 18px;
+      color: #555555;
+      margin-bottom: 24px;
+    }
+
+    .links {
+      margin-top: 40px;
+      padding-top: 16px;
+      border-top: 1px solid #e0e0e0;
+    }
+
+    .links a {
+      display: inline-block;
+      margin-right: 16px;
+      margin-bottom: 8px;
+      color: #0066cc;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      margin-top: 48px;
+      font-size: 14px;
+      color: #666666;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <h1>Neon Breaker 198X</h1>
+    <p class="tagline">
+      A modern-retro 8-bit brick breaker game, inspired by the golden age of arcade classics.
+    </p>
+
+    <h2>About Neon Breaker 198X</h2>
+    <p>
+      <strong>Neon Breaker 198X</strong> is a vertically oriented,
+      retro-style brick breaker game designed for smartphones and modern devices.
+      Featuring pixel-art visuals inspired by the 1980s,
+      the game combines nostalgic charm with smooth, modern gameplay.
+    </p>
+    <p>
+      Easy to play but challenging to master,
+      Neon Breaker 198X is built for short play sessions
+      as well as long-term progression across many stages.
+    </p>
+
+    <h2>Classic Feel, Modern Design</h2>
+    <p>
+      While the visuals embrace an 8-bit aesthetic,
+      the game is designed with modern usability in mind.
+      Clear visuals, responsive controls, and balanced difficulty
+      ensure an enjoyable experience for both casual players
+      and hardcore arcade fans.
+    </p>
+
+    <h2>Hundreds of Stages & Strategic Items</h2>
+    <p>
+      The game features a large number of carefully designed stages,
+      with difficulty gradually increasing as you progress.
+      Various power-up and challenge items appear during gameplay,
+      adding depth and strategy to the classic brick breaker formula.
+    </p>
+
+    <h2>Score, Share, and Compete</h2>
+    <p>
+      Earn high scores by clearing stages efficiently
+      and chaining powerful combos.
+      You can easily share your results and achievements
+      on social media and challenge your friends
+      to beat your score.
+    </p>
+
+    <h2>Play Anywhere</h2>
+    <p>
+      Neon Breaker 198X can be played offline,
+      making it perfect for commuting, traveling,
+      or quick breaks whenever you need some arcade action.
+    </p>
+
+    <div class="links">
+      <a href="privacy.html">Privacy Policy</a>
+      <a href="terms.html">Terms of Service</a>
+      <a href="faq.html">FAQ</a>
+    </div>
+
+    <footer>
+      © Neon Breaker 198X
+    </footer>
+
+  </div>
 </body>
 </html>
