--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
     </p>
 
     <div class="links">
-      <a href="privacy.html">Privacy Policy</a>
-      <a href="terms.html">Terms of Service</a>
-      <a href="faq.html">FAQ</a>
+      <a href="en/privacy.html">Privacy Policy</a>
+      <a href="en/terms.html">Terms of Service</a>
+      <a href="en/faq.html">FAQ</a>
     </div>
 
     <footer>
