--- a/ja/index.html
+++ b/ja/index.html
@@ -1,1 +1,145 @@
 
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Neon Breaker 198X | レトロブロック崩しゲーム</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.7;
+      margin: 0;
+      padding: 24px;
+      background-color: #ffffff;
+      color: #222222;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 8px;
+    }
+
+    h2 {
+      font-size: 22px;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 4px;
+    }
+
+    p {
+      margin: 12px 0;
+    }
+
+    ul {
+      margin: 12px 0 12px 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    .tagline {
+      font-size: 18px;
+      color: #555555;
+      margin-bottom: 24px;
+    }
+
+    .links {
+      margin-top: 40px;
+      padding-top: 16px;
+      border-top: 1px solid #e0e0e0;
+    }
+
+    .links a {
+      display: inline-block;
+      margin-right: 16px;
+      margin-bottom: 8px;
+      color: #0066cc;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      margin-top: 48px;
+      font-size: 14px;
+      color: #666666;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <h1>Neon Breaker 198X</h1>
+    <p class="tagline">
+      アーケード黄金期にインスパイアされた、モダン・レトロな8ビット風ブロック崩しゲーム。
+    </p>
+
+    <h2>Neon Breaker 198X について</h2>
+    <p>
+      <strong>Neon Breaker 198X</strong> は、スマートフォン向けに設計された
+      縦画面プレイのレトロスタイル・ブロック崩しゲームです。
+      1980年代のアーケードゲームを彷彿とさせるピクセルアートと、
+      現代的で快適な操作性を融合させています。
+    </p>
+    <p>
+      シンプルで直感的な操作ながら、
+      ステージが進むにつれて戦略性と難易度が高まります。
+      短時間のプレイから、じっくり遊ぶプレイまで幅広く楽しめます。
+    </p>
+
+    <h2>クラシックな見た目 × 現代的な設計</h2>
+    <p>
+      8ビット風のビジュアルを採用しつつ、
+      視認性の高い画面構成とレスポンスの良い操作感を実現。
+      カジュアルプレイヤーから、往年のアーケードファンまで
+      幅広く楽しめるゲーム体験を提供します。
+    </p>
+
+    <h2>豊富なステージと戦略的アイテム</h2>
+    <p>
+      多数のステージが用意されており、
+      進行に応じて徐々に難易度が上昇します。
+      ゲーム中にはさまざまなパワーアップやギミックが登場し、
+      単なる反射神経だけでなく戦略的な判断も求められます。
+    </p>
+
+    <h2>スコアを競い、シェアしよう</h2>
+    <p>
+      コンボをつなげてハイスコアを狙いましょう。
+      プレイ結果や達成記録はSNSで簡単にシェアでき、
+      友達とスコアを競い合うことも可能です。
+    </p>
+
+    <h2>いつでも、どこでもプレイ</h2>
+    <p>
+      Neon Breaker 198X はオフラインでもプレイ可能です。
+      通勤・通学中やちょっとした空き時間にも、
+      すぐにアーケード体験を楽しめます。
+    </p>
+
+    <div class="links">
+      <a href="privacy.html">プライバシーポリシー</a>
+      <a href="terms.html">利用規約</a>
+      <a href="faq.html">FAQ</a>
+    </div>
+
+    <footer>
+      © Neon Breaker 198X
+    </footer>
+
+  </div>
+</body>
+</html>
