--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -1,1 +1,137 @@
 
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8">
+  <title>Neon Breaker 198X | 復古磚塊消除遊戲</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.7;
+      margin: 0;
+      padding: 24px;
+      background-color: #ffffff;
+      color: #222222;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 8px;
+    }
+
+    h2 {
+      font-size: 22px;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 4px;
+    }
+
+    p {
+      margin: 12px 0;
+    }
+
+    .tagline {
+      font-size: 18px;
+      color: #555555;
+      margin-bottom: 24px;
+    }
+
+    .links {
+      margin-top: 40px;
+      padding-top: 16px;
+      border-top: 1px solid #e0e0e0;
+    }
+
+    .links a {
+      display: inline-block;
+      margin-right: 16px;
+      margin-bottom: 8px;
+      color: #0066cc;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      margin-top: 48px;
+      font-size: 14px;
+      color: #666666;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <h1>Neon Breaker 198X</h1>
+    <p class="tagline">
+      向街機黃金時代致敬的現代復古 8-bit 風格磚塊消除遊戲。
+    </p>
+
+    <h2>關於 Neon Breaker 198X</h2>
+    <p>
+      <strong>Neon Breaker 198X</strong> 是一款為智慧型手機設計的
+      直向畫面復古風格磚塊消除遊戲。
+      以 1980 年代街機遊戲為靈感的像素美術，
+      結合流暢且符合現代習慣的操作體驗。
+    </p>
+    <p>
+      操作簡單易上手，但隨著關卡推進，
+      遊戲的策略性與挑戰性也會逐步提升。
+      無論是短時間遊玩或長時間挑戰都非常適合。
+    </p>
+
+    <h2>經典外觀 × 現代設計</h2>
+    <p>
+      雖然採用了 8-bit 復古視覺風格，
+      但整體設計充分考慮了現代玩家的使用體驗。
+      清晰的畫面、即時反應的操作，
+      讓新手與老玩家都能輕鬆享受遊戲樂趣。
+    </p>
+
+    <h2>大量關卡與策略道具</h2>
+    <p>
+      遊戲中準備了大量精心設計的關卡，
+      難度會隨進度逐漸提升。
+      各種強化道具與特殊效果的出現，
+      為經典的磚塊消除玩法增添更多策略深度。
+    </p>
+
+    <h2>挑戰高分，分享成果</h2>
+    <p>
+      透過高效率破關與連鎖消除來獲得高分。
+      你可以輕鬆將遊戲成果分享到社群平台，
+      與朋友們互相挑戰、比較成績。
+    </p>
+
+    <h2>隨時隨地暢玩</h2>
+    <p>
+      Neon Breaker 198X 支援離線遊玩，
+      無論是在通勤途中、旅行時，
+      或短暫休息時都能立即享受街機樂趣。
+    </p>
+
+    <div class="links">
+      <a href="privacy.html">隱私權政策</a>
+      <a href="terms.html">服務條款</a>
+      <a href="faq.html">常見問題</a>
+    </div>
+
+    <footer>
+      © Neon Breaker 198X
+    </footer>
+
+  </div>
+</body>
+</html>
