--- a/ja/faq.html
+++ b/ja/faq.html
@@ -89,3 +89,92 @@
 
     <h3>アプリを削除するとデータは消えますか？</h3>
     <p>
+      はい。データは端末内に保存されているため、
+      アプリをアンインストールすると
+      進行状況は削除されます。
+    </p>
+
+    <h2>SNSシェアについて</h2>
+
+    <h3>スコアや進行状況をSNSに共有できますか？</h3>
+    <p>
+      はい。ゲームにはシェア機能があり、
+      X（旧Twitter）、Instagram、LINE などの
+      SNSにスコアや進行状況を投稿できます。
+    </p>
+
+    <h3>シェア内容に個人情報は含まれますか？</h3>
+    <p>
+      いいえ。シェアされる画像やテキストには
+      スコアやステージ進行などの
+      ゲーム関連情報のみが含まれます。
+      個人情報が自動的に含まれることはありません。
+    </p>
+
+    <h2>広告について</h2>
+
+    <h3>なぜ広告が表示されるのですか？</h3>
+    <p>
+      広告収益は開発および運営コストを支え、
+      ゲームを無料で提供し続けるために使用されています。
+      ご理解いただけますと幸いです。
+    </p>
+
+    <h3>パーソナライズ広告を無効にできますか？</h3>
+    <p>
+      はい。端末のプライバシー設定や広告設定から
+      「広告のトラッキングを制限」などを有効にすることで、
+      パーソナライズ広告を制限できます。
+    </p>
+
+    <h2>言語と設定</h2>
+
+    <h3>対応している言語は何ですか？</h3>
+    <p>
+      英語、日本語、繁体字中国語に対応しています。
+      言語はゲーム内の設定メニューから変更できます。
+    </p>
+
+    <h3>翻訳の誤りを見つけました</h3>
+    <p>
+      正確な翻訳を心がけていますが、
+      一部表現に差異や誤りが生じる場合があります。
+      あらかじめご了承ください。
+    </p>
+
+    <h2>トラブルシューティング</h2>
+
+    <h3>ゲームが正常に動作しません</h3>
+    <p>
+      アプリの再起動、または端末の再起動をお試しください。
+      あわせて、端末に十分な空き容量があるかもご確認ください。
+    </p>
+
+    <h3>エラーやクラッシュが発生しました</h3>
+    <p>
+      一時的な端末の状態が原因である可能性があります。
+      多くの場合、アプリの再起動で解消されます。
+    </p>
+
+    <h2>その他</h2>
+
+    <h3>アカウント登録は必要ですか？</h3>
+    <p>
+      いいえ。本アプリではアカウント登録は不要で、
+      個人アカウントの管理も行っていません。
+    </p>
+
+    <h3>データを削除するにはどうすればいいですか？</h3>
+    <p>
+      すべてのデータは端末内に保存されています。
+      アプリをアンインストールすることで、
+      すべての保存データが削除されます。
+    </p>
+
+    <footer>
+      © Neon Breaker 198X
+    </footer>
+
+  </div>
+</body>
+</html>
